--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,17 @@
 body{
-    background-color: ;
+    font-family: 'Open Sans', sans-serif;
+    
 }
 .grid{
     display: grid;
     grid-template-areas: 
     "nav nav nav nav nav"
     "hd hd hd hd hd"
-    "ar ar ar ar ar"
+    
     "mn mn mn mn mn"
     "ftr ftr ftr ftr ftr"
     ;    
-    grid-template-rows: 100px 500px 30px 2000px 160px;
+    grid-template-rows: 100px 500px  1800px 160px;
 }
 nav{
     grid-area: nav;
@@ -25,6 +26,9 @@ nav > ul{
     padding-left: 90px;
     color: rgb(252, 202, 116);   
 }
+.body{
+    background-color:#343a40;
+}
 header {
     grid-area: hd;
     background-repeat: no-repeat;
@@ -35,13 +39,15 @@ header > img{
     width: 100%;
 }
 main{
-    background-color:#343a40;
+    background-color:rgb(42, 66, 203);
+    width: 1200px;
+    padding-left: 130px;
+    margin-left: 165px;
     grid-area: mn; 
+    margin-top: 60px;
+    
 }
-article{
-    background-color:#343a40;
-    grid-area: ar; 
-}
+
 footer{
     background-color: rgb(42, 66, 203);
     grid-area: ftr;
@@ -49,6 +55,7 @@ footer{
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
+    margin-top: -100px;
 }
 footer > img{
     width: 30%;
@@ -70,17 +77,18 @@ footer > div ul{
 .link{ 
     color: rgba(252, 202, 116,.6);
 }
-.container{
-   background-color: rgb(42, 66, 203);
-   display:flex;
+
+.index{
+    float: left;   
+    margin: 19px;  
 }
 .button{
     display: flex;  
-    margin-bottom: 5px;
-    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-left: 25px;
 }
 .btn-secondary{
-    margin-left: 10px;
+    margin-left: 17px;
 }
 .left{
     padding-left: 30px;
@@ -89,25 +97,98 @@ footer > div ul{
 .card{
     width: 18rem;
     height: 20rem;
-    margin-top: 60px;    
+    margin-top: 40px;     
 }
 .card a{
     font-size: 1em;
     color: #343a40;
+    text-align: center;
 }
+.card-img-top{
+    width: 287px;
+    height: 169px;
+}
+
 .new{
     width: 800px;
-    height: 1000px;
-    margin-left: 300px;
+    height: 500px;
     color: rgb(252, 202, 116);
     font-size: 1.5em;
     padding: 70px;
     background-color: rgb(42, 66, 203); 
 }
+
 .jumbotron {
     background-color: rgb(42, 66, 203);
-    display:flex;
+    margin: 50px;
+    width: 800px;
+    height: 500px;
+    padding-top: 80px; 
 }
-.show{
-    color: rgb(252, 202, 116);;
+.show ,h2{
+    color: rgb(252, 202, 116);
+
 }
+h2{
+    color: rgb(252, 202, 116);
+    line-height: 70px;
+}
+.jumbotron-fluid{
+    background-color: rgb(42, 66, 203);
+    margin-top: 40px;
+   padding-right: 80px;
+    line-height: 2.5em;
+    color: rgb(252, 202, 116);
+}
+.about img{
+    width: 500px;
+    height: 300px;
+    border-radius: 10%;
+    margin-left: 190px;
+}
+.about-img:hover{
+    width: 900px;
+    height: 600px;
+    margin-left: 20px;
+}
+.about > p{
+    font-size: 1.5em;
+}
+.gallery{
+    background-color: rgb(42, 66, 203);
+    margin-top: 40px;
+    color: rgb(252, 202, 116);
+
+}
+.slider ul{
+    list-style: none;
+    display: flex ;
+    flex-wrap: wrap ;
+    justify-content: space-around;
+}
+.slider img{
+    width: 380px;
+    height: 280px;
+    margin: 10px;
+    border-radius: 5%;
+
+}
+.gallery-h1{
+    padding-bottom: 50px;
+    text-align: center;
+    font-size: 3em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
