makes some style to login/singup

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,20 +11,26 @@ body{
     "mn mn mn mn mn"
     "ftr ftr ftr ftr ftr"
     ;    
-    grid-template-rows: 100px 500px  1800px 160px;
+    grid-template-rows: 80px 500px  auto 160px;
 }
 nav{
     grid-area: nav;
-    margin-top: 10px;  
+   
 }
 nav > ul{
     display: flex;
     list-style: none; 
 }
 .nav{
-    font-size: 2em;
-    padding-left: 90px;
+    font-size: 1.7em;
+    padding-left: 40px;
     color: rgb(252, 202, 116);   
+}
+h3{
+    margin-top: 10px;
+}
+.user{
+    float: left;
 }
 .body{
     background-color:#343a40;
@@ -110,11 +116,13 @@ footer > div ul{
 }
 
 .new{
-    width: 800px;
-    height: 500px;
+  
     color: rgb(252, 202, 116);
     font-size: 1.5em;
-    padding: 70px;
+   
+    
+    padding: 60px 250px  40px  90px;
+    
     background-color: rgb(42, 66, 203); 
 }
 
@@ -145,6 +153,7 @@ h2{
     height: 300px;
     border-radius: 1%;
     margin-left: 190px;
+    padding-bottom: 60px;
 }
 .about-img:hover{
     width: 900px;
@@ -177,6 +186,29 @@ h2{
     padding-bottom: 50px;
     text-align: center;
     font-size: 3em;
+}
+.login{
+    width: 950px;
+    height: 500px;
+    background-color:rgb(218, 174, 98);
+    margin-top: 100px;
+    display: flex;
+    margin-bottom: 100px;
+    
+}
+.login img{
+    width: 400px;
+}
+.login-form{
+    padding-left: 40px;
+    padding-top: 20px;
+    
+}
+.login-h1{
+    text-decoration: underline;
+}
+.btn{
+    padding-left: 10;
 }
 
 
