--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,8 @@ nav > ul{
     float: left;
 }
 .body{
-    background-color:#343a40;
+    background-color: rgb(45, 44, 44);
+    width: 1500px;
 }
 header {
     grid-area: hd;
