--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,9 +24,11 @@ nav > ul{
 }
 .nav h3{
     margin-top: 10px;
+    padding-left: 10px;
 }
 .nav h1{
     margin-top: 19px;
+    padding-right: 20px;
 }
 .user{
     margin-left: 10px;
