--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,7 +119,7 @@ footer > div ul{
     color: rgb(252, 202, 116);
     font-size: 1.5em;
     padding: 60px 250px  40px  90px;
-    background-color: rgb(42, 66, 203); 
+    background-color:rgba(255, 255, 255, .8);
 }
 .jumbotron {
     background-color: rgb(42, 66, 203);
@@ -163,7 +163,7 @@ h3 {
     font-size: 1.5em;
 }
 .gallery{
-    background-color: rgb(42, 66, 203);
+    background-color:rgba(255, 255, 255, .8);
     margin-top: 40px;
     color: rgb(252, 202, 116);
 }
