--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,6 @@ nav > ul{
 .nav{
     font-size: 1em;
     padding-right: 5px;
-    /*color: rgb(252, 202, 116);*/
 }
 .nav h3{
     margin-top: 10px;
@@ -34,7 +33,6 @@ nav > ul{
     margin-left: 10px;
 }
 .body{
-    /*background-color: rgb(45, 44, 44);*/
     width: 1420px;
 }
 header {
@@ -55,7 +53,6 @@ main{
     margin-top: 60px;   
 }
 footer{
-    /*background-color: rgb(42, 66, 203);*/
     grid-area: ftr;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -116,7 +113,7 @@ footer > div ul{
     height: 169px;
 }
 .new{ 
-    color: rgb(252, 202, 116);
+    color: #343a40;
     font-size: 1.5em;
     padding: 60px 250px  40px  90px;
     /*background-color:rgba(255, 255, 255, .8);*/
@@ -141,11 +138,10 @@ h3 {
     line-height: 50px;
 }
 .jumbotron-fluid{
-    /*background-color: rgb(42, 66, 203);*/
     margin-top: 40px;
     padding-right: 80px;
     line-height: 2.5em;
-    color: rgb(252, 202, 116);
+    color: #343a40;
 }
 .about img{
     width: 500px;
@@ -163,7 +159,6 @@ h3 {
     font-size: 1.5em;
 }
 .gallery{
-    /*background-color:rgba(255, 255, 255, .8);*/
     margin-top: 40px;
     color: rgb(252, 202, 116);
 }
