add class name to style title

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@ body{
 }
 nav{
     grid-area: nav;
+    color: chocolate;
 }
 nav > ul{
     display: flex;
@@ -123,10 +124,8 @@ footer > div ul{
     color: #343a40;
     font-size: 1.5em;
     padding: 60px 250px  40px  90px;
-    /*background-color:rgba(255, 255, 255, .8);*/
 }
 .jumbotron {
-    /*background-color: rgb(42, 66, 203);*/
     margin: 50px;
     width: 800px;
     height: 1700px;
