--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,7 @@ footer{
     font-size: 1.6em;
     color: chocolate;
     font-weight: bold;
+    margin: 5px auto;
 }
 footer > img{
     width: 30%;
