--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,10 +25,10 @@ nav > ul{
     margin-top: 10px;
     padding-left: 10px;
 }
-.nav ul li h1{
+ li h1{
     margin-top: 19px;
     padding-right: 20px;
-    color: chocolate;
+    color: white;
 }
 .user{
     margin-left: 10px;
