--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,6 +129,10 @@ footer > div ul{
 .show ,h2{
     color: #343a40;
 }
+h3 {
+    color: white;
+    line-height: 70px;
+}
 .show-text{
     border: 2px solid;
     padding: 50px;
