--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,10 +25,9 @@ nav > ul{
     margin-top: 10px;
     padding-left: 10px;
 }
- li h1{
+.nav h1{
     margin-top: 19px;
     padding-right: 20px;
-    color: white;
 }
 .user{
     margin-left: 10px;
@@ -45,7 +44,6 @@ header {
     width: 100%;
     margin: 10px auto;
 }
-
 main{
     background-color:rgba(255, 255, 255, .8);
     width: 1200px;
@@ -61,6 +59,11 @@ footer{
     justify-items: center;
     align-items: center;
     margin-top: -100px;
+}
+.title{
+    font-size: 1.6em;
+    color: chocolate;
+    font-weight: bold;
 }
 footer > img{
     width: 30%;
@@ -104,7 +107,7 @@ footer > div ul{
     width: 18rem;
     height: 20rem;
     margin-top: 40px;
-    border-radius: 2px solid #fcca74;
+    border: 2px solid  #fcca74;
 }
 .card a{
     font-size: 1em;
@@ -123,7 +126,7 @@ footer > div ul{
 .jumbotron {
     margin: 50px;
     width: 800px;
-    height: 1000px;
+    height: 1700px;
     padding-top: 80px; 
 }
 .show ,h2{
@@ -157,7 +160,7 @@ h3 {
     margin-left: 20px;
 }
 .about > p{
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 .gallery{
     margin-top: 40px;
@@ -168,7 +171,6 @@ h3 {
     display: flex ;
     flex-wrap: wrap ;
     justify-content: space-around;
-    margin-top: 30px;
 }
 .slider img{
     width: 380px;
@@ -180,9 +182,6 @@ h3 {
     padding-bottom: 50px;
     text-align: center;
     font-size: 3em;
-    color: chocolate;
-    font-weight: bold;
-    margin: 5px auto;
 }
 .login{
     width: 950px;
