--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,6 +183,15 @@ h3 {
     text-align: center;
     font-size: 3em;
 }
+.title-two{
+    padding-bottom: 50px;
+    text-align: center;
+    font-size: 2em;
+}{
+    padding-bottom: 50px;
+    text-align: center;
+    font-size: 3em;
+}
 .login{
     width: 950px;
     height: 500px;
