--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,11 +22,11 @@ nav > ul{
     padding-right: 5px;
 }
 .nav h3{
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     padding-left: 10px;
 }
 .nav h1{
-    margin-top: 19px;
+    /*margin-top: 19px;*/
     padding-right: 20px;
 }
 .user{
