--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,12 +25,11 @@ nav > ul{
     /*margin-top: 10px;*/
     padding-left: 10px;
 }
-.nav h1{
-    /*margin-top: 19px;*/
-    padding-right: 20px;
-}
-.user{
+
+div .user{
     margin-left: 10px;
+    float: right;
+    display: flex;
 }
 .body{
     width: 1420px;
