--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,10 +22,8 @@ nav > ul{
     padding-right: 5px;
 }
 .nav h3{
-    /*margin-top: 10px;*/
-    padding-left: 10px;
+    padding-left: 13px;
 }
-
 div .user{
     margin-left: 10px;
     float: right;
@@ -60,9 +58,11 @@ footer{
     margin-top: -100px;
 }
 .title{
-    font-size: 1.6em;
+    font-size: 1.8em;
     color: chocolate;
     font-weight: bold;
+    margin: 0px auto;
+    padding-bottom: 30px;
 }
 .title-two{
     font-size: 1.4em;
