--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ div .user{
 }
 header {
     grid-area: hd;
-    background-image: url("../img/orlando2.jpg");
+    background-image: url("../img/3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
