--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,9 +6,18 @@ body{
     grid-template-areas: 
     "nav nav nav nav nav"
     "hd hd hd hd hd"
+    "title title title title "
     "mn mn mn mn mn"
     "ftr ftr ftr ftr ftr";    
     grid-template-rows: 80px 500px  auto 160px;
+}
+.main-title{
+    grid-area: title;
+    margin: 0 auto;
+    font-size: xx-large;
+    padding: 10px;
+    color: white;
+    background-color: #343a40;
 }
 nav{
     grid-area: nav;
@@ -18,7 +27,7 @@ nav > ul{
     list-style: none;
 }
 .nav{
-    font-size: 1em;
+    font-size: .7em;
     padding-right: 5px;
 }
 .nav h3{
@@ -37,10 +46,11 @@ header {
     background-image: url("../img/32.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
     margin: 10px auto;
     border-bottom: 6px solid #343a40;
+    border-top: 6px solid #343a40;
 }
 main{
     background-color:rgba(255, 255, 255, .8);
