--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,7 @@ header {
     margin: 10px auto;
     border-bottom: 6px solid #343a40;
     border-top: 6px solid #343a40;
+    background-color: #343a40;
 }
 main{
     background-color:rgba(255, 255, 255, .8);
