--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,18 +6,9 @@ body{
     grid-template-areas: 
     "nav nav nav nav nav"
     "hd hd hd hd hd"
-    "title title title title "
     "mn mn mn mn mn"
     "ftr ftr ftr ftr ftr";    
-    grid-template-rows: 80px 500px 80px auto 160px;
-}
-.main-title{
-    grid-area: title;
-    margin: 0 auto;
-    font-size: xx-large;
-    padding: 10px;
-    color: white;
-    background-color: #343a40;
+    grid-template-rows: 80px 500px  auto 160px;
 }
 nav{
     grid-area: nav;
@@ -27,7 +18,7 @@ nav > ul{
     list-style: none;
 }
 .nav{
-    font-size: .7em;
+    font-size: 1em;
     padding-right: 5px;
 }
 .nav h3{
@@ -49,9 +40,8 @@ header {
     height: 80%;
     width: 80%;
     margin: 10px auto;
-    border-bottom: 6px solid #343a40;
-    border-top: 6px solid #343a40;
-    background-color: #343a40;
+    border-bottom: 16px solid #343a40;
+
 }
 main{
     background-color:rgba(255, 255, 255, .8);
