--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,10 +38,10 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     height: 80%;
-    width: 80%;
+    width: 100%;
     margin: 10px auto;
     border-bottom: 16px solid #343a40;
-
+    border-top: 16px solid #343a40;
 }
 main{
     background-color:rgba(255, 255, 255, .8);
