--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,10 +50,12 @@ article{
     background-color: #343a40;
     color: white;
     padding: 10px;
-    margin: auto;
+    margin-top: 40px;
     font-size: xx-large;
     font-weight: bold;
-    font-family: "GB18030 Bitmap";
+    font-family: "GB18030 Bitmap", serif;
+    width: 100%;
+    text-align: center;
 }
 main{
     background-color:rgba(255, 255, 255, .8);
