--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ nav > ul{
     list-style: none;
 }
 .nav{
-    font-size: 1em;
+    font-size: .6em;
     padding-right: 5px;
 }
 .nav h3{
@@ -52,14 +52,14 @@ article{
     font-family: "GB18030 Bitmap", serif;
     width: 100%;
     text-align: center;
+    font-size: 1.6em;
 }
 main{
     background-color:rgba(255, 255, 255, .8);
     width: 1200px;
-    padding-left: 130px;
-    margin-left: 165px;
+    margin-left: 145px;
     grid-area: mn; 
-    margin-top: 50px;
+    margin-top: 40px;
 }
 footer{
     grid-area: ftr;
