--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,17 +14,19 @@ body{
 
 nav{
     grid-area: nav;
+    background-color: #343a40;
 }
 nav > ul{
     display: flex;
     list-style: none;
 }
 .nav{
-    font-size: .6em;
+    font-size: .5em;
     padding-right: 5px;
 }
 .nav h3{
     padding-left: 13px;
+    font-size: .5em;
 }
 div .user{
     margin-left: 10px;
@@ -36,7 +38,7 @@ div .user{
 }
 header {
     grid-area: hd;
-    background-image: url("../img/32.jpg");
+    background-image: url("../img/52.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
@@ -47,12 +49,11 @@ article{
     background-color: #343a40;
     color: white;
     padding: 10px;
-    font-size: xx-large;
     font-weight: bold;
     font-family: "GB18030 Bitmap", serif;
     width: 100%;
     text-align: center;
-    font-size: 1.6em;
+    font-size: 2em;
 }
 main{
     background-color:rgba(255, 255, 255, .8);
