--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ nav > ul{
 }
 .nav h3{
     padding-left: 13px;
-    font-size: .8em;
+    font-size: 1em;
 }
 div .user{
     margin-left: 10px;
@@ -41,7 +41,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    width: 80%;
+    width: 1200px;
 }
 article{
     grid-area: art;
