create more style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,13 +38,14 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    width: 1427px;
+    width: 100%;
 }
 article{
     grid-area: art;
     background-color: #343a40;
     color: white;
-    padding: 20px;
+    padding-top: 20px;
+    padding-top: 30px;
     font-weight: bold;
     font-family: "GB18030 Bitmap", serif;
     width: 100%;
@@ -54,7 +55,7 @@ article{
 main{
     background-color:rgba(255, 255, 255, .8);
     width: 1200px;
-    margin-left: 200px;
+    margin-left: 300px;
     grid-area: mn; 
     margin-top: 60px;
 }
