create more style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,7 @@ article{
     background-color: #343a40;
     color: white;
     padding-top: 20px;
-    padding-top: 30px;
+    padding-bottom: 30px;
     font-weight: bold;
     font-family: "GB18030 Bitmap", serif;
     width: 100%;
