--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    width: 100%;
+    width: 1420px;
 }
 article{
     grid-area: art;
