change galary photos

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,22 +172,22 @@ footer > div ul{
 .about > p{
     font-size: 1.3em;
 }
-.gallery{
-    margin-top: 40px;
-    color: #343a40;
-}
-.slider ul{
-    list-style: none;
-    display: flex ;
-    flex-wrap: wrap ;
-    justify-content: space-around;
-}
-.slider img{
-    width: 380px;
-    height: 280px;
-    margin: 10px;
-    border-radius: 5%;
-}
+/*.gallery{*/
+/*    margin-top: 40px;*/
+/*    color: #343a40;*/
+/*}*/
+/*.slider ul{*/
+/*    list-style: none;*/
+/*    display: flex ;*/
+/*    flex-wrap: wrap ;*/
+/*    justify-content: space-around;*/
+/*}*/
+/*.slider img{*/
+/*    width: 380px;*/
+/*    height: 280px;*/
+/*    margin: 10px;*/
+/*    border-radius: 5%;*/
+/*}*/
 .login{
     width: 950px;
     height: 500px;
@@ -212,7 +212,7 @@ footer > div ul{
 
 
 
-.grid {
+.gallery{
   display: grid;
   grid-template-rows:
     repeat(4, 180px);
@@ -248,12 +248,12 @@ footer > div ul{
 
 /* styling code */
 
-.grid {
+.gallery{
   margin:20px auto;
-  max-width:1000px;
+  max-width:1700px;
 }
 
-.grid > .item {
+.gallery > .item {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
