--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,11 @@ body{
     "ftr ftr ftr ftr ftr";    
     grid-template-rows: 65px 500px  80px auto 160px;
 }
+
+/*/////////////////*/
+/*layout comment*/
+/*///////////////*/
+
 nav{
     grid-area: nav;
     background-color: #343a40;
@@ -29,7 +34,7 @@ nav > ul{
     padding-top: 10px;
 }
 div .user{
-    margin-left: 800px;
+    margin-left: 700px;
     float: right;
     display: flex;
 }
@@ -53,21 +58,17 @@ article{
     text-align: center;
     font-size: 2em;
 }
+
+/*//////////////////*/
+/*index comment*/
+/*/////////////////*/
+
 main{
     background-color:rgba(255, 255, 255, .8);
     width: 1200px;
     margin-left: 220px;
     grid-area: mn; 
     margin-top: 60px;
-}
-footer{
-    grid-area: ftr;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-    margin-top: -100px;
-    width: 1420px;
 }
 .title{
     font-size: 1.8em;
@@ -80,26 +81,6 @@ footer{
     font-size: 1.4em;
     color: chocolate;
     font-weight: bold;
-}
-footer > img{
-    width: 30%;
-    border-radius: 50%;
-}
-footer > ul{
-    list-style: none;
-    font-size: 1.3em;
-    justify-items: left;
-    color:white;
-}
-footer > div ul{
-    padding-top: 20px;
-    list-style: none;
-    font-size: 1.3em;
-    line-height: 50px;
-    justify-items: left;
-}
-.link{ 
-    color: white;
 }
 .index{
     float: left;   
@@ -132,11 +113,21 @@ footer > div ul{
     width: 287px;
     height: 169px;
 }
+
+/*///////////////*/
+/*new comment*/
+/*///////////////*/
+
 .new{ 
     color: #343a40;
     font-size: 1.5em;
     padding: 60px 250px  40px  90px;
 }
+
+/*/////////////////*/
+/*show comment*/
+/*////////////////*/
+
 .jumbotron {
     margin: 50px;
     width: 800px;
@@ -151,6 +142,11 @@ footer > div ul{
     padding: 50px;
     line-height: 50px;
 }
+
+/*/////////////////////*/
+/*about comment*/
+/*////////////////////*/
+
 .jumbotron-fluid{
     margin-top: 40px;
     padding-right: 80px;
@@ -172,6 +168,10 @@ footer > div ul{
 .about > p{
     font-size: 1.3em;
 }
+
+/*//////////////////*/
+/*login comment*/
+/*/////////////////*/
 .login{
     width: 950px;
     height: 500px;
@@ -191,10 +191,9 @@ footer > div ul{
     color: #343a40;
 }
 
-
-
-
-
+/*//////////////////////*/
+/*gallery comment*/
+/*/////////////////////*/
 
 .gallery{
   display: grid;
@@ -205,38 +204,31 @@ footer > div ul{
   grid-gap: 5px;
  height: 1000px;
 }
-
 .item:nth-child(1) {
   grid-row: 1 / 4;
 }
-
 .item:nth-child(2) {
   grid-column: 2 / 4;
   grid-row: 1 / 3;
 }
-
 .item:nth-child(3) {
   grid-column: 3 / 4;
   grid-row: 3 / 5;
 }
-
 .item:nth-child(4) {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
 }
-
 .item:nth-child(5) {
   grid-column: 1 / 3;
   grid-row: 4 / 5;
 }
 
 /* styling code */
-
 .gallery{
   margin:20px auto;
   max-width:1700px;
 }
-
 .gallery > .item {
   background-position: center;
   background-repeat: no-repeat;
@@ -244,6 +236,36 @@ footer > div ul{
 }
 
 
+/*/////////////*/
+/*footer*/
+/*////////////*/
 
-
-
+footer{
+    grid-area: ftr;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    margin-top: -100px;
+    width: 1420px;
+}
+footer > img{
+    width: 30%;
+    border-radius: 50%;
+}
+footer > ul{
+    list-style: none;
+    font-size: 1.3em;
+    justify-items: left;
+    color:white;
+}
+footer > div ul{
+    padding-top: 20px;
+    list-style: none;
+    font-size: 1.3em;
+    line-height: 50px;
+    justify-items: left;
+}
+.link{
+    color: white;
+}
