--- a/public/css/style.css
+++ b/public/css/style.css
@@ -269,3 +269,15 @@ footer > div ul{
 .link{
     color: white;
 }
+
+
+/*/////////////////*/
+/*mobil setup*/
+/*/////////////////*/
+
+
+@media only screen and (max-width: 600px) {
+  .jumbotron , .new , .login , .about  {
+      height: 2000px;
+  }
+}
