--- a/public/css/style.css
+++ b/public/css/style.css
@@ -276,8 +276,16 @@ footer > div ul{
 /*mobil setup*/
 /*/////////////////*/
 
-@media only screen and (max-width: 400px) {
-  .jumbotron  {
+/*@media only screen and (max-width: 400px) {*/
+/*  .jumbotron  {*/
+/*      height: 3000px;*/
+
+/*  }*/
+/*}*/
+
+@media all and (max-width: 600px) and (orientation:landscape)
+{
+    .jumbotron  {
       height: 3000px;
 
   }
