setup mobil views

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -289,4 +289,10 @@ footer > div ul{
       height: 3000px;
 
   }
+    .about{
+        height: 3000px;
+    }
+    .new{
+        height: 3000px;
+    }
 }
