--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ div .user{
 }
 header {
     grid-area: hd;
-    background-image: url("../img/100.jpg");
+    background-image: url("../img/100.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
@@ -57,7 +57,7 @@ article{
     width: 1420px;
     text-align: center;
     font-size: 2em;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px chocolate;
+    text-shadow: 1px 1px 2px black, 0 0 25px chocolate, 0 0 5px chocolate;
 
 }
 
