change header size

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ div .user{
 }
 header {
     grid-area: hd;
-    background-image: url("../img/100.png");
+    background-image: url("../img/101.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
